--- a/Project5/index2.html
+++ b/Project5/index2.html
@@ -7,23 +7,38 @@
   </head>
   <body>
     <div class="container">
+      <div class="backleg"></div>
+      <div class="backleg2"></div>
+      <div class="frontleg"></div>
+      <div class="frontleg2"></div>
       <div class="deskbody"></div>
       <div class="smalldrawer"></div>
       <div class="smalldrawer2"></div>
       <div class="smalldrawer3"></div>
       <div class="largedrawer"></div>
-      <div class="largedrawer"></div>
-      <div class="largedrawer"></div>
+      <div class="largedrawer2"></div>
+      <div class="largedrawer3"></div>
       <div class="smallhandle"></div>
-      <div class="smallhandle"></div>
-      <div class="smallhandle"></div>
+      <div class="smallhandle2"></div>
+      <div class="smallhandle3"></div>
       <div class="largehandle"></div>
-      <div class="largehandle"></div>
-      <div class="largehandle"></div>
-      <div class="frontleg"></div>
-      <div class="frontleg"></div>
-      <div class="backleg"></div>
-      <div class="backleg"></div>
+      <div class="largehandle2"></div>
+      <div class="largehandle3"></div>
+      <div class="tail"></div>
+      <div class="dogbody"></div>
+      <div class="doghead"></div>
+      <div class="paw"></div>
+      <div class="arm"></div>
+      <div class="mouth"></div>
+      <div class="nose"></div>
+      <div class="eye"></div>
+      <div class="eye2"></div>
+      <div class="earbase"></div>
+      <div class="earbase2"></div>
+      <div class="eartip"></div>
+      <div class="eartip2"></div>
+      <div class="thigh"></div>
+      <div class="leg"></div>
     </div>
   </body>
 </html>
