--- a/Project5/index2.html
+++ b/Project5/index2.html
@@ -39,6 +39,7 @@
       <div class="eartip2"></div>
       <div class="thigh"></div>
       <div class="leg"></div>
+      <div class="window"></div>
     </div>
   </body>
 </html>
