--- a/Project5/index2.html
+++ b/Project5/index2.html
@@ -24,6 +24,10 @@
       <div class="largehandle"></div>
       <div class="largehandle2"></div>
       <div class="largehandle3"></div>
+      <div class="window"></div>
+      <div class="bottomframe"></div>
+      <div class="rod"></div>
+      <div class="curtain"></div>
       <div class="tail"></div>
       <div class="dogbody"></div>
       <div class="doghead"></div>
@@ -39,7 +43,6 @@
       <div class="eartip2"></div>
       <div class="thigh"></div>
       <div class="leg"></div>
-      <div class="window"></div>
     </div>
   </body>
 </html>
