--- a/Project5/openingindex.html
+++ b/Project5/openingindex.html
@@ -9,6 +9,6 @@
     <h1>Project 5</h1>
     <ul>
       <li><a href="index.html">3 Ideas</a></li>
-      <li><a href="index2.html">Snooze Time: First Draft</a></li>
+      <li><a href="index2.html">Sleepy Dog: First Draft</a></li>
   </body>
 </html>
