--- a/Project5/index2.html
+++ b/Project5/index2.html
@@ -25,6 +25,7 @@
       <div class="largehandle2"></div>
       <div class="largehandle3"></div>
       <div class="window"></div>
+      <div class="sun"></div>
       <div class="bottomframe"></div>
       <div class="rod"></div>
       <div class="curtain"></div>
@@ -39,8 +40,6 @@
       <div class="eye2"></div>
       <div class="earbase"></div>
       <div class="earbase2"></div>
-      <div class="eartip"></div>
-      <div class="eartip2"></div>
       <div class="thigh"></div>
       <div class="leg"></div>
     </div>
