--- a/Project5/index3.html
+++ b/Project5/index3.html
@@ -7,26 +7,27 @@
   </head>
   <body>
     <div class="container">
-    <div class="hair"></div>
-    <div class="face"></div>
-    <div class="eye"></div>
-    <div class="eye2"></div>
-    <div class="nose"></div>
-    <div class="bangs"></div>
-    <div class="music"></div>
-    <div class="peg"></div>
-    <div class="peg2"></div>
-    <div class="pbody"></div>
-    <div class="pleg"></div>
-    <div class="pleg2"></div>
-    <div class="chairleg"></div>
-    <div class="chairleg2"></div>
-    <div class="skirt"></div>
-    <div class="leg"></div>
-    <div class="leg2"></div>
-    <div class="shoe"></div>
-    <div class="shoe2"></div>
-    <div class="skirttop"></div>
+      <div class="hair"></div>
+      <div class="face"></div>
+      <div class="eye"></div>
+      <div class="eye2"></div>
+      <div class="nose"></div>
+      <div class="bangs"></div>
+      <div class="music"></div>
+      <div class="peg"></div>
+      <div class="peg2"></div>
+      <div class="pbody"></div>
+      <div class="rug"></div>
+      <div class="pleg"></div>
+      <div class="pleg2"></div>
+      <div class="chairleg"></div>
+      <div class="chairleg2"></div>
+      <div class="skirt"></div>
+      <div class="leg"></div>
+      <div class="leg2"></div>
+      <div class="shoe"></div>
+      <div class="shoe2"></div>
+      <div class="skirttop"></div>
     </div>
   </body>
 </html>
