--- a/Project5/index3.html
+++ b/Project5/index3.html
@@ -14,6 +14,10 @@
       <div class="nose"></div>
       <div class="bangs"></div>
       <div class="music"></div>
+      <div class="text">
+        <p>Mozart</p>
+      </div>
+      <div class="spine"></div>
       <div class="peg"></div>
       <div class="peg2"></div>
       <div class="pbody"></div>
