--- a/Project5/index3.html
+++ b/Project5/index3.html
@@ -41,11 +41,21 @@
       <div class="circle7"></div>
       <div class="circle8"></div>
       <div class="circle9"></div>
+      <div class="circle10"></div>
+      <div class="circle11"></div>
+      <div class="circle12"></div>
+      <div class="circle13"></div>
+      <div class="tail"></div>
       <div class="shead"></div>
+      <div class="seye"></div>
+      <div class="seye2"></div>
+      <div class="sear"></div>
+      <div class="sear2"></div>
       <div class="sleg"></div>
       <div class="sleg2"></div>
       <div class="sleg3"></div>
       <div class="sleg4"></div>
+      <div class="mstand"></div>
     </div>
   </body>
 </html>
