--- a/Project5/index3.html
+++ b/Project5/index3.html
@@ -56,6 +56,8 @@
       <div class="sleg3"></div>
       <div class="sleg4"></div>
       <div class="mstand"></div>
+      <div class="mphone"></div>
+      <div class="mbase"></div>
     </div>
   </body>
 </html>
