--- a/Project5/index3.html
+++ b/Project5/index3.html
@@ -32,6 +32,10 @@
       <div class="shoe"></div>
       <div class="shoe2"></div>
       <div class="skirttop"></div>
+      <div class="sleg"></div>
+      <div class="sleg2"></div>
+      <div class="sleg3"></div>
+      <div class="sleg4"></div>
       <div class="circle"></div>
       <div class="circle2"></div>
       <div class="circle3"></div>
@@ -49,12 +53,10 @@
       <div class="shead"></div>
       <div class="seye"></div>
       <div class="seye2"></div>
+      <div class="snose"></div>
+      <div class="smouth"></div>
       <div class="sear"></div>
       <div class="sear2"></div>
-      <div class="sleg"></div>
-      <div class="sleg2"></div>
-      <div class="sleg3"></div>
-      <div class="sleg4"></div>
       <div class="mstand"></div>
       <div class="mphone"></div>
       <div class="mbase"></div>
