--- a/Project5/index3.html
+++ b/Project5/index3.html
@@ -13,6 +13,8 @@
       <div class="eye2"></div>
       <div class="nose"></div>
       <div class="bangs"></div>
+      <div class="brim"></div>
+      <div class="hattop"></div>
       <div class="music"></div>
       <div class="text">
         <p>Mozart</p>
