--- a/Project5/index3.html
+++ b/Project5/index3.html
@@ -57,6 +57,8 @@
       <div class="seye2"></div>
       <div class="snose"></div>
       <div class="smouth"></div>
+      <div class="shattop"></div>
+      <div class="sbrim"></div>
       <div class="sear"></div>
       <div class="sear2"></div>
       <div class="mstand"></div>
