--- a/Project5/index3.html
+++ b/Project5/index3.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div class="container">
+      <div class="littlespotlight"></div>
+      <div class="bigspotlight"></div>
       <div class="hair"></div>
       <div class="face"></div>
       <div class="eye"></div>
