--- a/Project5/index3.html
+++ b/Project5/index3.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="littlespotlight"></div>
-      <div class="bigspotlight"></div>
+      <div class="spotlight"></div>
+      <div class="spotlight2"></div>
+      <div class="lamp"></div>
+      <div class="lamp2"></div>
       <div class="hair"></div>
       <div class="face"></div>
       <div class="eye"></div>
