--- a/Project3/index/indexFinal.html
+++ b/Project3/index/indexFinal.html
@@ -23,13 +23,16 @@
       </div>
       <div class="bodyContent">
         <div class="introSection clearfix">
+          <div class="pic2smallsizes">
+            <img src="../pictures/P2_pics/Almonds_1.jpg">
+          </div>
           <div class="introText">
             <h3>Almonds: crunchy, delicious, and&hellip;the center of a nefarious plot to suck California dry?</h3>
             <p>They certainly have used up a lot of ink lately&mdash;partly inspired by Mother Jones&rsquo;s reporting over the past year. California&rsquo;s drought-stricken Central Valley churns out 80 percent of the globe&rsquo;s almonds, and since each nut takes a gallon of water to produce, they account for close to 10 percent of the state&rsquo;s annual agricultural water use&mdash;or more than what the entire population of Los Angeles and San Francisco use in a year. As Grist&rsquo;s Nathanael Johnson put it, almonds have become a scapegoat of sorts&mdash;&ldquo;the poster-nut for human wastefulness in California&rsquo;s drought.&rdquo; Or, as Alissa Walker put it in Gizmodo, &ldquo;You know, ALMONDS, THE DEVIL&rsquo;S NUT.&rdquo; It&rsquo;s not surprising that the almond backlash has inspired a backlash of its own. California agriculture is vast and complex, and its water woes can&rsquo;t hang entirely on any one commodity, not even one as charismatic as the devil&rsquo;s nut almond. And as many have pointed out, almonds have a lot going for them&mdash;they&rsquo;re nutritious, they taste good, and they&rsquo;re hugely profitable for California. In 2014, almonds brought in a whopping $11 billion to the state&rsquo;s economy. Plus, other foods&mdash;namely, animal products&mdash;use a whole lot more water per ounce than almonds.</p>
 
             <p>So almonds must be worth all the water they require, right? Not so fast. Before you jump to any conclusions, consider the following five facts:</p>
           </div>
-          <div class="pic2">
+          <div class="pic2bigsizes">
             <img src="../pictures/P2_pics/Almonds_1.jpg">
           </div>
         </div>
@@ -62,14 +65,20 @@
           </div>
         </div>
         <div class="section4 clearfix">
+          <div class="pic5smallsizes">
+            <img src="../pictures/P2_pics/Almonds_2.png">
+            <div class="number3smallsizes">
+              <h6>3.</h6>
+            </div>
+          </div>
             <div class="text3">
               <p>Unlike other crops, almonds always require a lot of water&mdash;even during drought.  Annual crops like cotton, alfalfa, and veggies are flexible&mdash;farmers can fallow them in dry years. That&rsquo;s not so for nuts, which need to be watered every year, drought or no, or the trees die, wiping out farmers&rsquo; investments.</p>
 
               <p>Already, strains are showing. Back in 2013, a team led by US Geological Survey hydrologist Michelle Sneed discovered that a 1,200-square-mile swath of the southern Central Valley&mdash;a landmass more than twice the size of Los Angeles&mdash;had been sinking by as much as 11 inches per year, because the water table had fallen from excessive pumping. In an interview last year, Sneed told me the ongoing exodus from annual crops and pasture to nuts likely played a big role.</p>
             </div>
-            <div class="pic5">
+            <div class="pic5bigsizes">
               <img src="../pictures/P2_pics/Almonds_2.png">
-              <div class="number3">
+              <div class="number3bigsizes">
                 <h6>3.</h6>
               </div>
             </div>
@@ -87,13 +96,19 @@
           </div>
         </div>
         <div class="section6 clearfix">
+          <div class="pic7smallsizes">
+            <img src="../pictures/P2_pics/Almonds_9.jpg">
+            <div class="number5smallsizes">
+              <h6>5.</h6>
+            </div>
+          </div>
           <div class="text5">
             <p>Mostly, it&rsquo;s not small-scale farmers that are getting rich off the almond boom. With their surging overseas sales, almonds and pistachios have drawn in massive financial players hungry for a piece of the action. As Mother Jones reported last year, Hancock Agricultural Investment Group, an investment owned by the Canadian insurance and financial services giant Manulife Financial, owns at least 24,000 acres of almonds, pistachios, and walnuts, making it California&rsquo;s second-largest nut grower. TIAA-CREF, a large retirement and investment fund that owns 37,000 acres of California farmland, and boasts that it&rsquo;s one of the globe&rsquo;s top five almond producers.
           Then there&rsquo;s Terrapin Fabbri Management, a private equity firm that &ldquo;manages more than $100 million of farm assets on behalf of institutional investors and high net worth clients&rdquo; and says it&rsquo;s &ldquo;focused on capitalizing on the increasing global demand for California&rsquo;s agricultural output.&rdquo; In a piece earlier this year, The Economist pointed out that Terrapin had &ldquo;bought a dairy company and some vineyards and tomato fields in California, and converted all to grow almonds, whose price has soared as the Chinese have gone nuts for them.&rdquo; The magazine added that &ldquo;such conversions require up-front capital&rdquo;&mdash;e.g., to drop wells&mdash;&rdquo;and the ability to survive without returns for years.&rdquo; Those aren&rsquo;t privileges many small-scale farmers enjoy.</p>
           </div>
-          <div class="pic7">
+          <div class="pic7bigsizes">
             <img src="../pictures/P2_pics/Almonds_9.jpg">
-            <div class="number5">
+            <div class="number5bigsizes">
               <h6>5.</h6>
             </div>
           </div>
