--- a/Project5/index3.html
+++ b/Project5/index3.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="container">
+      <div class="floor"></div>
       <div class="spotlight"></div>
       <div class="spotlight2"></div>
       <div class="lamp"></div>
