--- a/Project3/index/indexFinal.html
+++ b/Project3/index/indexFinal.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="header clearfix">
         <div class="pic1">
-          <!-- <img src="../pictures/P2_pics/Almonds_8.jpg"> -->
+          <img src="../pictures/P2_pics/Almonds_8.jpg">
         </div>
         <div class="titleAuthor">
           <h1>Here's the Real Problem With Almonds</h1>
@@ -38,7 +38,7 @@
         </div>
         <div class="section2 clearfix">
           <div class="pic3">
-            <!-- <img src="../pictures/P2_pics/Almonds_3.jpg"> -->
+            <img src="../pictures/P2_pics/Almonds_3.jpg">
             <div class="number1">
               <h5>1.</h5>
             </div>
