--- a/Project5/openingindex.html
+++ b/Project5/openingindex.html
@@ -10,5 +10,6 @@
     <ul>
       <li><a href="index.html">3 Ideas</a></li>
       <li><a href="index3.html">Practice, Practice, Practice: First Draft</a></li>
+      <li><a href="index4.html">Practice, Practice, Practice: Second Draft</a></li>
   </body>
 </html>
