--- a/Project5/index4.html
+++ b/Project5/index4.html
@@ -86,9 +86,11 @@
         <div class="body">
           <div class="horizarm"></div>
           <div class="vertarm"></div>
-          <div class="tutu"></div>
           <div class="vertleg"></div>
           <div class="horizleg"></div>
+          <div class="tutu"></div>
+          <div class="tutu2"></div>
+          <div class="tutu3"></div>
         </div>
       </div>
     </div>
