--- a/Project5/index4.html
+++ b/Project5/index4.html
@@ -74,6 +74,8 @@
         <div class="mbase"></div>
       <!-- </div> -->
       <div class="pigspace">
+        <div class="spotlight3"></div>
+        <div class="lamp3"></div>
         <div class="head">
           <div class="ear"></div>
           <div class="ear2"></div>
@@ -82,6 +84,7 @@
           <div class="snout"></div>
           <div class="nostril"></div>
           <div class="nostril2"></div>
+          <div class="cheek"></div>
         </div>
         <div class="body">
           <div class="horizarm"></div>
