--- a/Project5/index4.html
+++ b/Project5/index4.html
@@ -94,6 +94,8 @@
           <div class="tutu"></div>
           <div class="tutu2"></div>
           <div class="tutu3"></div>
+          <div class="pshoe"></div>
+          <div class="pshoe2"></div>
         </div>
       </div>
     </div>
