--- a/Project5/index5.html
+++ b/Project5/index5.html
@@ -12,7 +12,7 @@
         <div class="spotlight"></div>
         <div class="lamp"></div>
         <div class="sheephead">
-          <div class="shead"></div>
+          <!-- <div class="shead"></div> -->
           <div class="seye"></div>
           <div class="seye2"></div>
           <div class="snose"></div>
