--- a/Project5/index5.html
+++ b/Project5/index5.html
@@ -60,6 +60,8 @@
           <div class="bangs"></div>
           <div class="brim"></div>
           <div class="hattop"></div>
+          <div class="eyebrow"></div>
+          <div class="eyebrow2"></div>
         </div>
         <div class="girlbody">
           <div class="skirt"></div>
@@ -70,7 +72,11 @@
           <div class="skirttop"></div>
         </div>
         <div class="piano">
+          <div class="music"></div>
           <div class="spine"></div>
+          <div class="text">
+            <p>Mozart</p>
+          </div>
           <div class="peg"></div>
           <div class="peg2"></div>
           <div class="pbody"></div>
@@ -79,10 +85,6 @@
           <div class="pleg2"></div>
           <div class="chairleg"></div>
           <div class="chairleg2"></div>
-          <div class="music"></div>
-          <div class="text">
-            <p>Mozart</p>
-          </div>
         </div>
       </div>
       <div class="pigspace">
