--- a/Project5/index5.html
+++ b/Project5/index5.html
@@ -112,12 +112,13 @@
           <div class="pshoe2"></div>
         </div>
       </div>
-      <div class="curtain"></div>
-      <!-- the first script element calls the jquery library. without the library the jquery will not work because it is not able to be read. -->
-    <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
+      <div class="curtain">
+        <!-- the first script element calls the jquery library. without the library the jquery will not work because it is not able to be read. -->
+        <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
 
-    <!-- the second script element calls my js file -->
-    <script src="js/main.js"></script>
+        <!-- the second script element calls my js file -->
+        <script src="js/main.js"></script>
+      </div>
     </div>
   </body>
 </html>
