--- a/Project5/index5.html
+++ b/Project5/index5.html
@@ -4,6 +4,11 @@
       <title>Alexandra Middlebrooks</title>
       <link href="main4.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
+      <!-- the first script element calls the jquery library. without the library the jquery will not work because it is not able to be read. -->
+      <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
+
+      <!-- the second script element calls my js file -->
+      <script src="js/main.js"></script>
   </head>
   <body>
     <div class="container">
@@ -112,13 +117,8 @@
           <div class="pshoe2"></div>
         </div>
       </div>
-      <div class="curtain">
-        <!-- the first script element calls the jquery library. without the library the jquery will not work because it is not able to be read. -->
-        <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
-
-        <!-- the second script element calls my js file -->
-        <script src="js/main.js"></script>
-      </div>
+      <div class="curtaintop"></div>
+        <div class="curtain"></div>
     </div>
   </body>
 </html>
