--- a/Project5/index5.html
+++ b/Project5/index5.html
@@ -118,7 +118,8 @@
         </div>
       </div>
       <div class="curtain"></div>
-      <div class="curtaintop"></div>
+      <div class="curtainPull"></div>
+        <div class="tassle"></div>
     </div>
   </body>
 </html>
