--- a/Project5/index5.html
+++ b/Project5/index5.html
@@ -57,6 +57,9 @@
         <div class="spotlight3"></div>
         <div class="lamp3"></div>
         <div class="head">
+          <div class="crown"></div>
+          <div class="crown2"></div>
+          <div class="crown3"></div>
           <div class="ear"></div>
           <div class="ear2"></div>
           <div class="peye"></div>
