--- a/Project5/index5.html
+++ b/Project5/index5.html
@@ -60,6 +60,9 @@
           <div class="crown"></div>
           <div class="crown2"></div>
           <div class="crown3"></div>
+          <div class="ruby"></div>
+          <div class="ruby2"></div>
+          <div class="ruby3"></div>
           <div class="ear"></div>
           <div class="ear2"></div>
           <div class="peye"></div>
