--- a/Project5/index5.html
+++ b/Project5/index5.html
@@ -98,7 +98,7 @@
           <div class="eyebrow"></div>
           <div class="eyebrow2"></div>
         </div>
-        <div class="piano" onclick="document.getElementById('pianoRun').play();">
+        <div class="piano">
           <div class="music"></div>
           <div class="spine"></div>
           <div class="text">
@@ -106,7 +106,7 @@
           </div>
           <div class="peg"></div>
           <div class="peg2"></div>
-          <div class="pbody"></div>
+          <div class="pbody" onclick="document.getElementById('pianoRun').play();"></div>
           <div class="rug"></div>
           <div class="pleg"></div>
           <div class="pleg2"></div>
