--- a/Project5/openingindex.html
+++ b/Project5/openingindex.html
@@ -11,6 +11,6 @@
       <li><a href="index.html">3 Ideas</a></li>
       <li><a href="index3.html">Practice, Practice, Practice: First Draft</a></li>
       <li><a href="index4.html">Practice, Practice, Practice: Second Draft (1440px for now)</a></li>
-      <li><a href="index5.html">Practice, Practice, Practice: Final (responsive)</a></li>
+      <li><a href="index5.html">Practice, Practice, Practice: Final (responsive; sound when you click on tassle, sheep's head, lamps, piano, and pig's head)</a></li>
   </body>
 </html>
